; ModuleID = '/home/carl/AnghaBench/mpv/video/out/gpu/extr_video.c_debug_check_gl.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/gpu/extr_video.c_debug_check_gl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_video = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.TYPE_4__*, i8*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gl_video*, i8*)* @debug_check_gl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @debug_check_gl(%struct.gl_video* %0, i8* %1) #0 {
  %3 = alloca %struct.gl_video*, align 8
  %4 = alloca i8*, align 8
  store %struct.gl_video* %0, %struct.gl_video** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.gl_video*, %struct.gl_video** %3, align 8
  %6 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %5, i32 0, i32 0
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32 (%struct.TYPE_4__*, i8*)*, i32 (%struct.TYPE_4__*, i8*)** %10, align 8
  %12 = icmp ne i32 (%struct.TYPE_4__*, i8*)* %11, null
  br i1 %12, label %13, label %26

13:                                               ; preds = %2
  %14 = load %struct.gl_video*, %struct.gl_video** %3, align 8
  %15 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %14, i32 0, i32 0
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32 (%struct.TYPE_4__*, i8*)*, i32 (%struct.TYPE_4__*, i8*)** %19, align 8
  %21 = load %struct.gl_video*, %struct.gl_video** %3, align 8
  %22 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %21, i32 0, i32 0
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %22, align 8
  %24 = load i8*, i8** %4, align 8
  %25 = call i32 %20(%struct.TYPE_4__* %23, i8* %24)
  br label %26

26:                                               ; preds = %13, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
